[gd_scene load_steps=5 format=3 uid="uid://gd061jtji0gv"]

[ext_resource type="Script" path="res://DeathScreen.gd" id="1_2euxp"]

[sub_resource type="GDScript" id="GDScript_v7i42"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Level: \" + str(Global.level + 1)
"

[sub_resource type="GDScript" id="GDScript_djc5w"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Your Score: \" + str(Global.score)
"

[sub_resource type="GDScript" id="GDScript_ysgk4"]
script/source = "extends TextEdit


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_text_changed():
	Global.username = text.replace(\"\\n\", \"\")
"

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_2euxp")

[node name="DeadScreen" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="DeadScreen"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DeadScreen/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DeadScreen/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Level" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "The end..."
script = SubResource("GDScript_v7i42")

[node name="Score" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_djc5w")

[node name="ScrollContainer" type="ScrollContainer" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Score1" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score2" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score3" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score4" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score5" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score6" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score7" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score8" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score9" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Score10" type="Label" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="NameInput" type="TextEdit" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Your Name (A-Za-z0-9 )"
script = SubResource("GDScript_ysgk4")

[node name="CenterContainer" type="CenterContainer" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="NextLevel" type="Button" parent="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
text = "Next Level"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/NameInput" to="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/NameInput" method="_on_text_changed"]
[connection signal="pressed" from="DeadScreen/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/NextLevel" to="." method="_on_next_level_pressed"]
